--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "main": "flatnotes/src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "parcel build --no-minify flatnotes/src/index.html --out-dir flatnotes/dist",
     "build": "parcel build flatnotes/src/index.html --out-dir flatnotes/dist",
     "watch": "parcel flatnotes/src/index.html --out-dir flatnotes/dist"
   },
   "author": "Adam Dullage",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "@toast-ui/editor-plugin-code-syntax-highlight": "3.1.0",
     "@toast-ui/vue-editor": "3.2.2",
-    "@vue/component-compiler-utils": "3.3.0",
-    "axios": "1.3.2",
     "bootstrap-vue": "2.23.1",
-    "mousetrap": "1.6.5",
+    "mousetrap": "1.6.5"
+  },
+  "devDependencies": {
+    "@vue/component-compiler-utils": "3.3.0",
     "parcel-bundler": "1.12.5",
     "sass": "1.58.0",
     "vue-hot-reload-api": "2.3.4",
